--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 
 <script type="text/javascript">
     const ENDPOINT_URL = "https://s3.eu-west-1.amazonaws.com"
-    const ACCESS_KEY_ID = "AKIA5TTO2IB6N7DO3X53"
-    const ACCESS_KEY_SECRET = "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"
+    const ACCESS_KEY_ID = "123"
+    const ACCESS_KEY_SECRET = "alabala"
     const BUCKET_NAME = "pptfiletransfer"
     let cont = document.getElementById('pptContainer');
     let tags = [];
